--- a/freertos_app_Example3_6_resuelto/freertos_app_Example3_6_resuelto.ioc
+++ b/freertos_app_Example3_6_resuelto/freertos_app_Example3_6_resuelto.ioc
@@ -1,4 +1,7 @@
 #MicroXplorer Configuration settings - do not modify
+CAD.formats=
+CAD.pinconfig=
+CAD.provider=
 FREERTOS.IPParameters=Tasks01,configGENERATE_RUN_TIME_STATS,configUSE_TRACE_FACILITY,configUSE_STATS_FORMATTING_FUNCTIONS,configRECORD_STACK_HIGH_ADDRESS,configUSE_NEWLIB_REENTRANT
 FREERTOS.Tasks01=defaultTask,0,128,StartDefaultTask,Default,NULL,Dynamic,NULL,NULL
 FREERTOS.configGENERATE_RUN_TIME_STATS=1
@@ -22,33 +25,41 @@ Mcu.Name=STM32F413Z(G-H)Tx
 Mcu.Package=LQFP144
 Mcu.Pin0=PC13
 Mcu.Pin1=PC14-OSC32_IN
-Mcu.Pin10=PG7
-Mcu.Pin11=PA8
-Mcu.Pin12=PA9
-Mcu.Pin13=PA10
-Mcu.Pin14=PA11
-Mcu.Pin15=PA12
-Mcu.Pin16=PA13
-Mcu.Pin17=PA14
-Mcu.Pin18=PB3
-Mcu.Pin19=PB7
+Mcu.Pin10=PB10
+Mcu.Pin11=PB11
+Mcu.Pin12=PB14
+Mcu.Pin13=PD8
+Mcu.Pin14=PD9
+Mcu.Pin15=PG6
+Mcu.Pin16=PG7
+Mcu.Pin17=PA8
+Mcu.Pin18=PA9
+Mcu.Pin19=PA10
 Mcu.Pin2=PC15-OSC32_OUT
-Mcu.Pin20=VP_FREERTOS_VS_CMSIS_V1
-Mcu.Pin21=VP_SYS_VS_tim1
-Mcu.Pin22=VP_TIM2_VS_ClockSourceINT
+Mcu.Pin20=PA11
+Mcu.Pin21=PA12
+Mcu.Pin22=PA13
+Mcu.Pin23=PA14
+Mcu.Pin24=PG9
+Mcu.Pin25=PG14
+Mcu.Pin26=PB3
+Mcu.Pin27=PB7
+Mcu.Pin28=VP_FREERTOS_VS_CMSIS_V1
+Mcu.Pin29=VP_SYS_VS_tim1
 Mcu.Pin3=PH0 - OSC_IN
+Mcu.Pin30=VP_TIM2_VS_ClockSourceINT
 Mcu.Pin4=PH1 - OSC_OUT
 Mcu.Pin5=PB0
-Mcu.Pin6=PB14
-Mcu.Pin7=PD8
-Mcu.Pin8=PD9
-Mcu.Pin9=PG6
-Mcu.PinsNb=23
+Mcu.Pin6=PE7
+Mcu.Pin7=PE8
+Mcu.Pin8=PE14
+Mcu.Pin9=PE15
+Mcu.PinsNb=31
 Mcu.ThirdPartyNb=0
 Mcu.UserConstants=
 Mcu.UserName=STM32F413ZHTx
-MxCube.Version=6.6.1
-MxDb.Version=DB.6.0.60
+MxCube.Version=6.9.1
+MxDb.Version=DB.6.0.91
 NVIC.BusFault_IRQn=true\:0\:0\:false\:false\:true\:false\:true\:false\:false
 NVIC.DebugMonitor_IRQn=true\:0\:0\:false\:false\:true\:false\:true\:false\:false
 NVIC.ForceEnableDMAVector=true
@@ -105,6 +116,16 @@ PB0.GPIOParameters=GPIO_Label
 PB0.GPIO_Label=LD1 [Green]
 PB0.Locked=true
 PB0.Signal=GPIO_Output
+PB10.GPIOParameters=PinState,GPIO_Label
+PB10.GPIO_Label=D3
+PB10.Locked=true
+PB10.PinState=GPIO_PIN_SET
+PB10.Signal=GPIO_Output
+PB11.GPIOParameters=PinState,GPIO_Label
+PB11.GPIO_Label=D4
+PB11.Locked=true
+PB11.PinState=GPIO_PIN_SET
+PB11.Signal=GPIO_Output
 PB14.GPIOParameters=GPIO_Label
 PB14.GPIO_Label=LD3 [Red]
 PB14.Locked=true
@@ -137,6 +158,32 @@ PD9.GPIO_Label=STLK_TX [STM32F103CBT6_PA2]
 PD9.Locked=true
 PD9.Mode=Asynchronous
 PD9.Signal=USART3_RX
+PE14.GPIOParameters=GPIO_Speed,PinState,GPIO_Label
+PE14.GPIO_Label=D1
+PE14.GPIO_Speed=GPIO_SPEED_FREQ_LOW
+PE14.Locked=true
+PE14.PinState=GPIO_PIN_SET
+PE14.Signal=GPIO_Output
+PE15.GPIOParameters=PinState,GPIO_Label
+PE15.GPIO_Label=D2
+PE15.Locked=true
+PE15.PinState=GPIO_PIN_SET
+PE15.Signal=GPIO_Output
+PE7.GPIOParameters=GPIO_PuPd,GPIO_Label
+PE7.GPIO_Label=S4
+PE7.GPIO_PuPd=GPIO_PULLUP
+PE7.Locked=true
+PE7.Signal=GPIO_Input
+PE8.GPIOParameters=GPIO_PuPd,GPIO_Label
+PE8.GPIO_Label=S3
+PE8.GPIO_PuPd=GPIO_PULLUP
+PE8.Locked=true
+PE8.Signal=GPIO_Input
+PG14.GPIOParameters=GPIO_PuPd,GPIO_Label
+PG14.GPIO_Label=S1
+PG14.GPIO_PuPd=GPIO_PULLUP
+PG14.Locked=true
+PG14.Signal=GPIO_Input
 PG6.GPIOParameters=GPIO_Label
 PG6.GPIO_Label=USB_PowerSwitchOn [STMPS2151STR_EN]
 PG6.Locked=true
@@ -145,6 +192,11 @@ PG7.GPIOParameters=GPIO_Label
 PG7.GPIO_Label=USB_OverCurrent [STMPS2151STR_FAULT]
 PG7.Locked=true
 PG7.Signal=GPIO_Input
+PG9.GPIOParameters=GPIO_PuPd,GPIO_Label
+PG9.GPIO_Label=S2
+PG9.GPIO_PuPd=GPIO_PULLUP
+PG9.Locked=true
+PG9.Signal=GPIO_Input
 PH0\ -\ OSC_IN.GPIOParameters=GPIO_Label
 PH0\ -\ OSC_IN.GPIO_Label=MCO
 PH0\ -\ OSC_IN.Locked=true
@@ -173,12 +225,15 @@ ProjectManager.MainLocation=Core/Src
 ProjectManager.NoMain=false
 ProjectManager.PreviousToolchain=
 ProjectManager.ProjectBuild=false
-ProjectManager.ProjectFileName=freertos_app_Example2_6.ioc
-ProjectManager.ProjectName=freertos_app_Example2_6
+ProjectManager.ProjectFileName=freertos_app_Example3_6_resuelto.ioc
+ProjectManager.ProjectName=freertos_app_Example3_6_resuelto
+ProjectManager.ProjectStructure=
 ProjectManager.RegisterCallBack=
 ProjectManager.StackSize=0x400
 ProjectManager.TargetToolchain=STM32CubeIDE
 ProjectManager.ToolChainLocation=
+ProjectManager.UAScriptAfterPath=
+ProjectManager.UAScriptBeforePath=
 ProjectManager.UnderRoot=true
 ProjectManager.functionlistsort=1-SystemClock_Config-RCC-false-HAL-false,2-MX_GPIO_Init-GPIO-false-HAL-true,3-MX_USART3_UART_Init-USART3-false-HAL-true,4-MX_USB_OTG_FS_PCD_Init-USB_OTG_FS-false-HAL-true,5-MX_TIM2_Init-TIM2-false-HAL-true
 RCC.48MHZClocksFreq_Value=24000000
@@ -279,4 +334,5 @@ VP_TIM2_VS_ClockSourceINT.Mode=Internal
 VP_TIM2_VS_ClockSourceINT.Signal=TIM2_VS_ClockSourceINT
 board=NUCLEO-F413ZH
 boardIOC=true
+rtos.0.ip=FREERTOS
 isbadioc=false
